@@ -31,6 +31,7 @@
                     <visible>skin.string(showRecentMusicItems) + SubString(skin.string(showRecentMusicItems),false)</visible>
                     <include>artist</include>
                     <include>album</include>
+                    <include>artistalbums</include>
                     <include>song</include>
                     <include>musicgenre</include>
                     <include>musicfiles</include>
