@@ -1,31 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
-    <!--Album browser-->
-    <include name="album">
+    <!--Artist Album browser-->
+    <include name="artistalbums">
 
         <!--fanart-->
         <control type="group">
-            <visible>container.content(albums) + !container.content(songs) + !SubString(container.folderpath,musicdb://artists)</visible>
+            <visible>container.content(albums) + !container.content(songs) + SubString(container.folderpath,musicdb://artists)</visible>
             <control type="image">
-                <include>dimensionsFullscreen</include>
-                <aspectratio scalediffuse="false">stretch</aspectratio>
-                <texture background="true" border="0">$INFO[listitem.Art(artist.fanart)]</texture>
-                <fadetime>1500</fadetime>
-                <colordiffuse>22ffffff</colordiffuse>
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>fullscreenWidth</width>
+                <height>fullscreenHeight</height>
+                <aspectratio scalediffuse="false" align="center">stretch</aspectratio>
+                <texture background="true" fallback="colors/offblack.png" border="0">$INFO[Container.Art(artist.fanart)]</texture>
+                <fadetime>500</fadetime>
+                <colordiffuse>66ffffff</colordiffuse>
+                <include>kenBurnsey</include>
             </control>
             <control type="image">
+                <include>dimensionsFullscreen</include>
                 <texture>vignette.png</texture>
                 <colordiffuse>ffffffff</colordiffuse>
                 <aspectratio>stretch</aspectratio>
             </control>
+             <control type="image">
+                <posx>0</posx>
+                <posy>row-20-begin</posy>
+                <width>fullscreenWidth</width>
+                <height>15-row</height>
+                <aspectratio scalediffuse="false">stretch</aspectratio>
+                <texture border="0">colors/black.png</texture>
+                <colordiffuse>ccffffff</colordiffuse>
+            </control>
+
+            <!--titles-->
+            <control type="group">
+                <visible>!controlgroup(9000).hasfocus</visible>
+                <posx>col-1-begin</posx>
+                <posy>row-6-begin</posy>
+
+                <control type="label">
+                    <posx>24-col</posx>
+                    <posy>0</posy>
+                    <width>24-col</width>
+                    <height>8-row</height>
+                    <align>right</align>
+                    <font>veryLargeLight</font>
+                    <textcolor>66ffffff</textcolor>
+                    <shadowcolor>-</shadowcolor>
+                    <wrapmultiline>true</wrapmultiline>
+                    <label>$INFO[listitem.year][CR][B]$INFO[listitem.title][/B]</label>
+                </control>
+            </control>
         </control>
 
         <control type="panel" id="50">
-            <visible>container.content(albums) + !container.content(songs) + !SubString(container.folderpath,musicdb://artists)</visible>
-            <posx>78</posx>
-            <posy>row-5-begin</posy>
+            <visible>container.content(albums) + !container.content(songs) + SubString(container.folderpath,musicdb://artists)</visible>
+            <posx>72</posx>
+            <posy>row-21-begin</posy>
             <width>1800</width>
-            <height>23-row</height>
+            <height>9-row</height>
             <onleft>9000</onleft>
             <onright>60</onright>
             <ondown>50</ondown>
@@ -112,70 +146,10 @@
                         <width>4-col-gutter</width>
                         <height>4-col-gutter</height>
                         <aspectratio>stretch</aspectratio>
-                        <texture border="0">$INFO[Listitem.thumb]</texture>
-                        <bordertexture border="3" colordiffuse="33FFFFFF">colors/white.png</bordertexture>
+                        <texture border="0">$INFO[ListItem.Art(thumb)]</texture>
+                        <bordertexture border="3" colordiffuse="ffFFFFFF">colors/white.png</bordertexture>
                         <bordersize>3</bordersize>
-                        <colordiffuse>ff666666</colordiffuse>
-                    </control>
-                    <control type="label">
-                        <posx>12</posx>
-                        <posy>2-row</posy>
-                        <width>240</width>
-                        <height>2-row</height>
-                        <align>center</align>
-                        <aligny>center</aligny>
-                        <font>regularStrong</font>
-                        <textcolor>textActive</textcolor>
-                        <label>$INFO[ListItem.title]</label>
-                    </control>
-                    <control type="label">
-                        <posx>12</posx>
-                        <posy>3-row</posy>
-                        <width>240</width>
-                        <height>2-row</height>
-                        <align>center</align>
-                        <aligny>center</aligny>
-                        <font>buttonTitle</font>
-                        <textcolor>textActive</textcolor>
-                        <label>$INFO[ListItem.Artist]</label>
-                    </control>
-                    <control type="grouplist">
-                        <posx>42</posx>
-                        <posy>5-row</posy>
-                        <width>4-col-gutter</width>
-                        <orientation>horizontal</orientation>
-                        <control type="label">
-                            <width>24</width>
-                            <height>2-row</height>
-                            <aligny>center</aligny>
-                            <font>symbol</font>
-                            <textcolor>textActive</textcolor>
-                            <label></label>
-                        </control>
-                        <control type="label">
-                            <width>1-col</width>
-                            <height>2-row</height>
-                            <aligny>center</aligny>
-                            <font>smallStrong</font>
-                            <textcolor>textActive</textcolor>
-                            <label>$LOCALIZE[31183]</label>
-                        </control>
-                        <control type="label">
-                            <width>24</width>
-                            <height>2-row</height>
-                            <aligny>center</aligny>
-                            <font>symbol</font>
-                            <textcolor>textActive</textcolor>
-                            <label></label>
-                        </control>
-                        <control type="label">
-                            <width>1-col</width>
-                            <height>2-row</height>
-                            <aligny>center</aligny>
-                            <font>smallStrong</font>
-                            <textcolor>textActive</textcolor>
-                            <label>$LOCALIZE[31184]</label>
-                        </control>
+                        <colordiffuse>ffffffff</colordiffuse>
                     </control>
                 </control>
             </focusedlayout>
