@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<smartplaylist type="tvshows">
-    <name>Random tvshows</name>
+<smartplaylist type="albums">
+    <name>collage_RandomAlbums</name>
     <match>all</match>
     <limit>50</limit>
     <order direction="ascending">random</order>
