@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<smartplaylist type="albums">
-    <name>randomAlbums</name>
+<smartplaylist type="movies">
+    <name>collage_randomMovies</name>
     <match>all</match>
     <limit>50</limit>
     <order direction="ascending">random</order>
