@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<smartplaylist type="tvshows">
+    <name>collage_RandomTVShows</name>
+    <match>all</match>
+    <limit>50</limit>
+    <order direction="ascending">random</order>
+</smartplaylist>
